# RTOS-Design-for-Simulated-Sensor-Network-Coordination

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
.github/workflows/: packages.yml  release.yml
docs/diagrams/: ipc_overview_model.drawio  message_model.drawio  sensor_model.drawio  system_architecture.drawio  system_overview.drawio  task_model.drawio
docs/tables/: func_req.tgn  non_func_req.tgn  proj_deliverables.tgn  project_obj.tgn  sim_param.tgn  sys_components.tgn  task_classification.tgn
include/: CSVLogger.hpp  ConsoleLogger.hpp  Controller.hpp  EDFScheduler.hpp  JSONLogger.hpp  Logger.hpp  MetricsCollector.hpp  PriorityScheduler.hpp  Resource.hpp  RoundRobinScheduler.hpp  Scheduler.hpp  SimulationEngine.hpp  TaskControlBlock.hpp  TaskController.hpp
src/: CMakeLists.txt  CSVLogger.cpp  ConsoleLogger.cpp  Controller.cpp  EDFScheduler.cpp  JSONLogger.cpp  MetricsCollector.cpp  PriorityScheduler.cpp  Resource.cpp  RoundRobinScheduler.cpp  SimulationEngine.cpp  TaskController.cpp
src/version-1.0/: CMakeLists.txt
src/version-1.0/include/: CSVLogger.hpp  ConsoleLogger.hpp  Logger.hpp  MessageQueue.hpp  Metrics.hpp  Scheduler.hpp
src/version-1.0/src/: CSVLogger.cpp  ConsoleLogger.cpp  Controller.cpp  JSONLogger.cpp  PriorityScheduler.cpp
src/version-1.0/tests/: test_scheduler_context_switch.cpp  test_scheduler_cpu_idle.cpp  test_scheduler_resource_blocking.cpp  test_scheduler_response_time.cpp  test_scheduler_sanity.cpp
src/version-2.0/: CMakeLists.txt  main.cpp
src/version-2.0/config/: config.hpp
src/version-2.0/experiment/: ExperimentRunner.cpp  ExperimentRunner.hpp
src/version-2.0/include/: CABuffer.hpp  ConsoleLogger.hpp  Controller.hpp  Dispatcher.cpp  Dispatcher.hpp  EDFScheduler.hpp  Engine.hpp  JSONLogger.hpp  Kernel.hpp  Logger.hpp  MetricEvaluator.hpp  MetricsCollector.hpp  PriorityScheduler.hpp  RMScheduler.hpp  Scheduler.hpp  Sensor.hpp  TaskBehaviour.hpp  TaskControlBlock.hpp  TimeUtils.hpp
src/version-2.0/simulation/: ConsumerTask.cpp  ConsumerTask.hpp  ProducerTask.cpp  ProducerTask.hpp
src/version-2.0/src/: CABuffer.tpp  ConsoleLogger.cpp  Controller.cpp  Dispatch.cpp  Dispatcher.cpp  EDFScheduler.cpp  Engine.cpp  JSONLogger.cpp  Kernel.cpp  MetricsCollector.cpp  PriorityScheduler.cpp  RMScheduler.cpp  Sensor.cpp  TaskControlBlock.cpp  TimeUtils.cpp
src/version-2.0/tests/: test_deadline_miss.cpp  test_edf_scheduler.cpp  test_kernel_features.cpp  test_kernel_sanity.cpp  test_preemption_count.cpp  test_preemptive_kernel.cpp  test_priority_scheduler.cpp  test_rm_scheduler.cpp  test_scheduler_sanity.cpp  test_stress.cpp
tests/: test_edf.cpp  test_priority.cpp  test_round_robin.cpp  test_scheduler.cpp  test_scheduler_context_switch.cpp  test_scheduler_cpu_idle.cpp  test_scheduler_resource_blocking.cpp  test_scheduler_response_time.cpp  test_scheduler_sanity.cpp  test_schedulers.cpp
visualisation/: Extractor.py  SimData.py  visualisation.py
visualisation/version-1.0/: SimData.py
visualisation/version-2.0/: EnhancedPlotter.py  Loader.py  Plotter.py  Visualisation.py  compare_schedulers.py  visualisation.py
